<resources>
    <string name="app_name">TheCheezary</string>
    <string name="welcome_text">Welcome to the Cheezary</string>
    <string name="welcome_description">Welcome to the most wonderful desserts ever seen (and taste) by the human being</string>
    <string name="button_start">Get Start</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="Email">E-mail</string>
    <string name="password">Password</string>
    <string name="terms">I have read and accept terms and conditions of The Cheezery</string>
    <string name="sing_in">Sing in</string>
    <string name="our_menu">Our Menu</string>
    <string name="cold_drinks">Cold Drinks</string>
    <string name="hot_drinks">Hot Drinks</string>
    <string name="sweets">Sweets</string>
    <string name="salties">Salties</string>
    <string name="combos">Combos</string>
    <string name="customizable">Custom</string>
</resources>