<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:paddingHorizontal="40dp"
    tools:context=".Register_Activity">

    <ImageView
        android:layout_width="215dp"
        android:layout_height="65dp"
        android:src="@drawable/hello"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center_horizontal"
        />
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        android:layout_marginTop="@dimen/input_margin"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:inputType="text"
        android:layout_marginTop="@dimen/input_margin"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:inputType="text"
        android:layout_marginTop="@dimen/input_margin"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="text"
        android:layout_marginTop="@dimen/input_margin"
        />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:textStyle="italic"
        android:textSize="15sp"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="@dimen/input_margin"
        />

    <Button
        android:layout_width="219dp"
        android:layout_height="40dp"
        android:background="@drawable/round_button"
        android:text="@string/sing_in"
        android:textColor="@color/dusty_white"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:id="@+id/button_sing_in"
        />

</LinearLayout>